--- a/TODO
+++ b/TODO
@@ -1,3 +1,12 @@
-1. TOR client in python (torpy)
-2. Calendar using toast UI
-3. txt editor with grammarly like tools.
+1. Calendar using toast UI
+2. txt editor with grammarly like tools.
+3. blackboard
+4. calendar
+6. kanban style list makin
+7. video player
+8. pdf viewer, annotator and bookshelf
+9. on screen keyboard.
+10. email client.
+11. audio studio.
+12. sastaa GIMP.
+13. sastaa video editor.
